--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Rajavasanthan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.1.5"
